# signallab

./: .env.example  .eslintrc.cjs  .gitignore  README.md  deploy_devnet.sh  deploy_script.sh  fix_deps.sh  package.json  pnpm-workspace.yaml  tsconfig.base.json  vercel.json
.githooks/: pre-commit
.github/workflows/: ci.yml
apps/web/: eslint.config.mjs  next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/bio/enrich/: route.ts
apps/web/src/app/docs/: page.tsx
apps/web/src/app/feed/: page.tsx
apps/web/src/app/migrate/: page.tsx
apps/web/src/app/projects/[projectPda]/: page.tsx
apps/web/src/app/social/: page.tsx
apps/web/src/components/: Navbar.tsx
apps/web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  ErrorState.tsx  Input.tsx  Loading.tsx  PageHeader.tsx
apps/web/src/context/: ToastContext.tsx
apps/web/src/hooks/: useSubscription.ts
apps/web/src/lib/: crypto.ts  env.ts  net.ts  provenance.ts  rateLimit.ts  registry.ts  social.ts  solanaProvider.tsx  storage.ts
apps/web/src/types/: socialfi.d.ts
demo/: demo-script.md
demo/screenshots/: README.md
programs/research_registry/: Anchor.toml  Cargo.toml  debug_validator.sh  fix_validator.sh  install_and_build.sh  install_deps.sh  package.json  run_test.sh  run_test_manual.sh  start_dev.sh  tsconfig.json
programs/research_registry/programs/research_registry/: Cargo.toml
programs/research_registry/programs/research_registry/src/: lib.rs
programs/research_registry/tests/: research_registry.ts
scripts/: secret-guard.mjs
(+3 files in other folders)
